--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,10 @@
     justify-content: space-evenly;
     align-items: center;
 }
+.nav-links a:hover{
+    color: var(--bg-color);
+    font-weight: bolder;
+}
 
 .titulo{
     font-family: var(--font-primary);
