--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@
     align-items: center;
     width: 100%;
     margin: 5px 15px;
-    background: #fff;
+    background: #ffffff;
 }
 .nav-links ul{
     list-style: none;
