--- a/css/login-style.css
+++ b/css/login-style.css
@@ -70,15 +70,25 @@ body {
 }
 
 #container_form {
-    background-color: olive;
+    background-color: #8DD686;
     width: 300px;
-    height: 290px;
     align-self: center;
     margin: 50px auto;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     font-weight: bold;
+}
+
+.container_register {
+    justify-content: center;
+    display: grid;
+    text-align: center;
+    color: #2f5c34;
+}
+
+.container_register a {
+    color: #1f3b22;
 }
 
 label {
@@ -89,24 +99,26 @@ label {
 
 input[type="email"],
 input[type="password"] {
-    width: 93%;
     padding: 10px;
     border: 2px solid darkgreen;
-    border-radius: 3px;
+    border-radius: 6px;
 }
 
+
 button {
+    background-color: beige;
     width: 100%;
-    padding: 10px;
-    background-color: #007bff;
-    color: #fff;
+    color: black;
     border: none;
-    border-radius: 3px;
+    border-radius: 5px;
     cursor: pointer;
+    padding: 10px 20px;
+    font-weight: bold;
+    margin: 20px 0px;
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #57B360;
 }
 
 img {
@@ -121,9 +133,9 @@ img {
 }
 
 .contenedor_input {
-    padding: 3px;
-    display: block;
     flex-direction: column;
+    padding: 10px 20px;
+    display: grid;
 }
 
 .contenedor {
@@ -133,22 +145,9 @@ img {
     font-weight: bolder;
 }
 
-#btn_enviar {
-    cursor: default;
-    cursor: pointer;
-    display: flex;
-    float: left;
-}
-
-button {
-    background-color: skyblue;
-    color: black;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+.btn_enviar {
     padding: 10px 20px;
-    font-weight: bold;
-    margin-top: 20px;
+    display: grid;
 }
 
 header {
