--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@
 
 .header{
     height: 15vh;
+    border: 1px solid var(--bg-primary);
 }
 
 .btn-ombu{
@@ -44,7 +45,9 @@
     background-position: center;
     height: 13vh;
     box-shadow: inset 0 0 0 2000px rgba(50, 50, 50, 0.185);
+    border: 1px solid var(--bg-primary);
 }
+
 .nav-links{
     height: 2vh;
     display: flex;
@@ -55,6 +58,7 @@
     margin: 5px 5px;
     background: #ffffff;
 }
+
 .nav-links ul{
     list-style: none;
 }
@@ -117,6 +121,7 @@
     /* display: grid; */
     /* grid-template-columns: 100%; */
     /* grid-template-rows: auto 1fr auto; */
+    border: 1px solid rgba(255, 255, 255, 0);
     font-family: var(--font-primary);
     font-size: medium;
     background-color: var(--bg-color);
@@ -153,6 +158,8 @@ a{
     height: 5vh;
     text-align: center;
     margin: auto;
+    border: 1px solid var(--bg-primary);
+
 }
 .foot-links{
     width: 100%;
@@ -228,6 +235,7 @@ a{
 }
 
 .redirect-acc{
+    align-self: center;
     text-align: center;
     width: 300px;
     margin: 10px 0px;
@@ -252,18 +260,20 @@ input{
     padding: 10px;
     border: 2px solid darkgreen;
     border-radius: 3px;
+    align-self: center;
 }
 button {
-    width: 100%;
-    padding: 10px;
+    width: auto;
+    padding: 15px;
     background-color: var(--bg-color);
     color: #fff;
     border: none;
     border-radius: 3px;
     cursor: pointer;
+    align-self: center;
 }
 .contenedor_input {
-    padding: 3px;
+    padding: auto;
     display: block;
     flex-direction: column;
 }
@@ -276,18 +286,10 @@ button {
 }
 
 #btn_enviar {
-    cursor: default;
     cursor: pointer;
     display: flex;
     float: left;
     width: 93%;
-}
-#form-imagen {
-    height: 45px;
-    width: 45px;
-    margin: 0px 0px 25px;
-    padding: auto;
-    display: flex;
 }
 
 /* Codigo Katherine Registro */
@@ -296,6 +298,8 @@ button {
     width: 100%;
     height: auto;
     padding: none;
+    align-self: center;
+    align-items: center;
 }
 
 .contenedor_input select{
@@ -486,21 +490,18 @@ button:hover {
 
     #container_form {
         background-color: var(--bg-color);
-        width: 20%;
+        width: 40vh;
         height: auto;
         align-self: center;
-        margin: 25px auto;
-        padding: 15px;
         border-radius: 10px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         font-weight: bold;
-        align-items: center;
-        align-self: center;
     }
 
     .user {
         height: 45px;
         width: 45px;
+        display: grid;
         align-self: center;
         margin: auto;
     }
