--- a/css/style.css
+++ b/css/style.css
@@ -310,6 +310,28 @@ button {
     width: 100%;
 }
 
+.text h1,
+.equipo h1,
+.calidad h1 {
+    font-weight: bold;
+    color: #725866;
+    text-align: center;
+}
+
+
+.text h3,
+.equipo h3,
+.calidad h3 {
+    font-weight: bold;
+    color: darkslategrey;
+    text-align: justify;
+    width: 55%;
+    height: 55%;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
 label {
     display: flex;
     margin-bottom: 10px;
