--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
 :root{
     --bg-color: #30ac0bb0;
     --bg-primary: #0bdf40cb;
+    --bg-alpha: #00000040;
     --bg-hover: #03a52b21;
     --font-primary: "Mooli", sans-serif;
     --font-color: #04173b;
@@ -310,6 +311,16 @@ button {
     width: 100%;
 }
 
+.container-aboutus {
+    width: 75%;
+    margin: 50px auto;
+    padding: 2%;
+    align-self: center;
+    border-radius: 10px;
+    font-weight: bold;
+    background-color: var(--bg-alpha);
+}
+
 .text h1,
 .equipo h1,
 .calidad h1 {
@@ -317,7 +328,6 @@ button {
     color: #725866;
     text-align: center;
 }
-
 
 .text h3,
 .equipo h3,
@@ -329,7 +339,6 @@ button {
     height: 55%;
     margin-left: auto;
     margin-right: auto;
-
 }
 
 label {
