--- a/css/style.css
+++ b/css/style.css
@@ -330,6 +330,15 @@ button {
     text-align: center;
 }
 
+.text h2{
+    font-weight: bold;
+    color: black;
+    font-size: larger;
+    text-align: center;
+    height: 70%;
+    margin: 10px;
+}
+
 .text h3{
     font-weight: bold;
     color: darkslategrey;
@@ -338,6 +347,12 @@ button {
     height: 70%;
     margin-left: auto;
     margin-right: auto;
+}
+.text p{
+    color: black;
+    padding: 25px;
+    text-align: left;
+    font-weight: normal;
 }
 
 .container-img {
@@ -376,6 +391,7 @@ button {
 .intro p{
     color: darkslategrey;
     padding: 25px;
+    font-weight: normal;
 }
 
 label {
