--- a/css/style.css
+++ b/css/style.css
@@ -483,7 +483,7 @@ button:hover {
         border: 1px solid var(--bg-primary);
     }
     .Menu {
-        width: 120%;
+        width: 85%;
         text-align: left;
         justify-self:left;
     }
@@ -493,9 +493,10 @@ button:hover {
     }
     
     .Menu>li>a {
-        font-size: smaller;
+        text-align: right;
+        font-size: 0.65rem;
         border-radius: 0px;
-        padding: 0px;
+        padding: 5px;
     }
     
     .subMenu {
@@ -506,9 +507,16 @@ button:hover {
         opacity: 0;
         transition: opacity 0.5s;
     }
+
+    .subMenu>li>a{
+        font-size: 0.65rem;
+    }
+
     .btn-ombu {
-        width: 20%;
-        margin: 0px;
+        font-size: 0.65rem;
+        text-align: center;
+        width: 15%;
+        margin: 5px;
         padding: 0px;
         display: flex;
         transition: background-color 0.4s ease;
