--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@
     --bg-alpha: #00000040;
     --bg-hover: #03a52b21;
     --bg-border: #725866;
+    --bg-plant: #0080004b;
+    --bg-tools: #ffb22270;
     --font-primary: "Mooli", sans-serif;
     --font-color: #04173b;
     --font-title: #725866;
@@ -197,16 +199,23 @@ a {
 }
 
 .elemento-container{
-    background-color: rgba(5, 65, 18, 0.315);
     height: 80%;
-    width: 25%;
-    max-width: 50%;
+    width: 50%;
+    border-radius: 15px;
+}
+.elemento-container.tools{
+    background-image: url(/rsc/bg-tools.jpg);
+    border: 1px solid var(--bg-tools);
+}
+.elemento-container.plants{
+    background-image: url(/rsc/bg-plants.jpg);
+    border: 1px solid var(--bg-plant);
 }
 
 .elemento-img {
-    margin: 10px;
-    height: 90%;
-    width: 90%;
+    margin: 15px;
+    height: 55%;
+    width: 55%;
     border-style: double;
     border: 1px solid black;
     border-radius: 10px;
@@ -232,7 +241,10 @@ a {
     font-family: var(--font-primary);
     text-align: justify;
     margin: 15px;
-
+    background-color: #ffffffbb;
+    border-radius: 15px;
+    padding: 15px;
+    border: 1px solid black;
 }
 
 .elemento-oferta {
@@ -250,6 +262,7 @@ a {
     width: 50%;
     margin: auto;
     transition: var(--bg-color);
+    background-color: #ffffff55;
 }
 
 @keyframes pulse {
@@ -641,6 +654,57 @@ button:hover {
         font-size: 0.65rem;
     }
 
+    .elemento-container{
+        height: 475px;
+        width: 45%;
+        border-radius: 15px;
+        text-align: center;
+        margin: 5px;
+    }
+    .elemento-container.tools{
+        background-image: url(/rsc/bg-tools.jpg);
+        border: 1px solid var(--bg-tools);
+    }
+    .elemento-container.plants{
+        background-image: url(/rsc/bg-plants.jpg);
+        border: 1px solid var(--bg-plant);
+    }
+    
+    .elemento-img {
+        margin: 10px;
+        height: 30%;
+        width: 75%;
+        border-style: double;
+        border: 1px solid black;
+        border-radius: 10px;
+    }
+    
+    .elemento-detalle {
+        font-family: var(--font-primary);
+        text-align: center;
+    }
+    
+    .elemento-nombre {
+        color: var(--font-color);
+        font-weight: bolder;
+        font-size: x-large;
+    }
+    
+    .elemento-precio {
+        color: black;
+        font-weight: bold;
+    }
+    
+    .elemento-descripcion{
+        font-size: 0.75rem;
+        font-family: var(--font-primary);
+        text-align: justify;
+        margin: 10px;
+        background-color: #ffffffbb;
+        border-radius: 15px;
+        padding: 15px;
+        border: 1px solid black;
+    }
 }
 
 /* Tablet */
@@ -738,4 +802,21 @@ button:hover {
         margin: auto;
     }
 
+    .elemento-container{
+        background-color: rgba(5, 65, 18, 0.315);
+        height: 750px;
+        width: 24%;
+        margin: 5px;
+        margin-bottom: 25px;
+    }
+
+    .shop {
+        text-align: center;
+        align-items: top;
+        align-self: center;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        margin: 5px;
+    }
 }
